deployment/code-server/base/code-server.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: code-server
  labels:
    istio-injection: enabled
