deployment/code-server/base/code-server.pomerium.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: code-server
  namespace: code-server
spec:
  hosts:
    - code.int.anhdle14.me
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: pomerium-proxy.istio-system.svc.cluster.local
